bluec-tests/tests/invalid/types_bool/invalid_type_specifier1.c
int main(void) {
    _Bool _Bool b = 0;
    return b;
}